--- a/index.qmd
+++ b/index.qmd
@@ -1,8 +1,9 @@
 ---
 title: "Bebop Paleo"
-image: images/Broken_Hill_Skull_(Replica01).jpg
+image: images/Broken_Hill_Skull.jpg
 bibliography: my-refs.bib
 csl: journal-of-human-evolution.csl
+
 ---
 
 Welcome to Bebop Paleo. This site will act as my hub for storing and displaying information pertaining to my dissertation work in Paleoanthropology.
@@ -10,3 +11,9 @@ Welcome to Bebop Paleo. This site will act as my hub for storing and displaying 
 I am learning about rmarkdown [@rmarkdown2018]
 
 To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+
+::: {layout-ncol=2}
+![Map of East Asian Late Middle Pleistocene Localities (~350-70 ka). The locality names can be found in the paper linked on my About page.](Chapter 4 map_FM1.png){width=65%}
+
+![The Dali skull represents a classic Archaic hominin specimen from East Asia, dating between 267-258 ka. It comes from the site of Dali represented by the number one on the map to the left. There is current debate about it's species status. ](Dali_Man_Skull,_Replica.jpg){width=55%}
+:::
