--- a/my-refs.bib
+++ b/my-refs.bib
@@ -35,3 +35,21 @@
   url = {https://bookdown.org/yihui/rmarkdown-cookbook},
 }
 
+@article{wu_description_2013,
+	title = {A description of the geological context, discrete traits, and linear morphometrics of the {Middle} {Pleistocene} hominin from {Dali}, {Shaanxi} {Province}, {China}},
+	volume = {150},
+	issn = {1096-8644},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/ajpa.22188},
+	doi = {10.1002/ajpa.22188},
+	abstract = {In 1978, a nearly complete hominin fossil cranium was recovered from loess deposits at the site of Dali in Shaanxi Province, northwestern China. It was subsequently briefly described in both English and Chinese publications. Here we present a comprehensive univariate and nonmetric description of the specimen and provide comparisons with key Middle Pleistocene Homo erectus and non-erectus hominins from Eurasia and Africa. In both respects we find affinities with Chinese H. erectus as well as African and European Middle Pleistocene hominins typically referred to as Homo heidelbergensis. Specifically, the Dali specimen possesses a low cranial height, relatively short and arched parietal bones, an angled occipital bone, and a nonprominent articular tubercle relative to the preglenoid surface all of which distinguish it from Afro/European Middle Pleistocene Homo and align it with Asian H. erectus. At the same time, it displays a more derived morphology of the supraorbital torus and supratoral sulcus and a thinner tympanic plate than H. erectus, a relatively long upper (lambda-inion) occipital plane with a clear separation of inion and opisthocranion, and an absolute and relative increase in brain size, all of which align it with African and European Middle Pleistocene Homo. Finally, traits such as the form of the frontal keel and the relatively short, broad midface align Dali specifically with other Chinese specimens from the Middle Pleistocene and Late Pleistocene, including H. erectus, and differentiate these from the Afro/European specimens of this time period. Am J Phys Anthropol, 2013. © 2012 Wiley Periodicals, Inc.},
+	language = {en},
+	number = {1},
+	urldate = {2022-10-24},
+	journal = {American Journal of Physical Anthropology},
+	author = {Wu, Xinzhi and Athreya, Sheela},
+	year = {2013},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/ajpa.22188},
+	keywords = {Asia, Homo erectus, Homo heidelbergensis},
+	pages = {141--157},
+	file = {Snapshot:files/78/ajpa.html:text/html},
+}
