--- a/index.qmd
+++ b/index.qmd
@@ -8,12 +8,16 @@ csl: journal-of-human-evolution.csl
 
 Welcome to Bebop Paleo. This site will act as my hub for storing and displaying information pertaining to my dissertation work in Paleoanthropology.
 
-I am learning about rmarkdown [@rmarkdown2018]
+<hr>
+
+Paleoanthropology is the study of human fossils and evolution. Like many disciplines that include discussions of phylogeney, there is ongoing debate in my field regarding how certain taxa and individual specimens are classified. My current research works to add to this discussion by quantifying the degree of cranial variation observed in Upper Paleolithic modern humans and using this data to establish parameters for analysis of anatomical distance between late Middle Pleistocene hominin remains. With this, I expect to provide evidence for a highly variable and less speciose hominin population in the late Middle Pleistocene of East Asia. 
+
+<hr> 
 
 To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
 
 ::: {layout-ncol=2}
 ![Map of East Asian Late Middle Pleistocene Localities (~350-70 ka).](Chapter 4 map_FM1.png){width=65%}
 
-![The Dali skull represents a classic Archaic hominin specimen from East Asia, dating between 267-258 ka. It comes from the site of Dali represented by the number one on the map to the left. There is current debate about it's species status. ](Dali_Man_Skull,_Replica.jpg){width=55%}
+![The Dali skull represents a classic Archaic hominin specimen from East Asia, dating between 267-258 ka. It comes from the site of Dali represented by the number one on the map to the left. There is current debate about it's species status [@wu_description_2013]. ](Dali_Man_Skull,_Replica.jpg){width=55%}
 :::
