--- a/my-refs.bib
+++ b/my-refs.bib
@@ -53,3 +53,19 @@
 	pages = {141--157},
 	file = {Snapshot:files/78/ajpa.html:text/html},
 }
+
+@incollection{boutin2014life,
+  title={Life and Death at Tell en-Naṣbeh: A Bioarchaeological Analysis},
+  author={Boutin, Alexis T and McClellan, Whitney R and Cusimano, Daniel A},
+  booktitle={" As for me, I will dwell at Mizpah…": The Tell en-Nasbeh Excavations after 85 Years},
+  pages={31--58},
+  year={2014},
+  publisher={Gorgias Press}
+}
+
+@phdthesis{cusimano2015trampling,
+  title={Trampling modification: an actualistic study in taphonomy},
+  author={Cusimano, Daniel Aaron},
+  year={2015},
+  school={California State University, East Bay}
+}
