--- a/index.qmd
+++ b/index.qmd
@@ -10,11 +10,14 @@ Welcome to Bebop Paleo. This site will act as my hub for storing and displaying 
 
 <hr>
 
-Paleoanthropology is the study of human fossils and evolution. Like many disciplines that include discussions of phylogeney, there is ongoing debate in my field regarding how certain taxa and individual specimens are classified. My current research works to add to this discussion by quantifying the degree of cranial variation observed in Upper Paleolithic modern humans and using this data to establish parameters for analysis of anatomical distance between late Middle Pleistocene hominin remains. With this, I expect to provide evidence for a highly variable and less speciose hominin population in the late Middle Pleistocene of East Asia. 
+Paleoanthropology is the study of human fossils and evolution. Like many disciplines that include discussions of phylogeney, there is ongoing debate in my field regarding how certain taxa and individual specimens are classified. 
 
-<hr> 
+My current research works to add to this discussion by quantifying the degree of cranial variation observed in Upper Paleolithic modern humans and using this data to establish parameters for analysis of anatomical distance between late Middle Pleistocene hominin remains. With this, I expect to provide evidence for a highly variable and less speciose hominin population in the late Middle Pleistocene of East Asia. This work is being pursued under the guidance of Dr. Christopher Bae from the Department of Anthropology at University of Hawai'i, Manoa. 
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+
+To learn more about the Paleoanthropological research run by Dr. Bae at UH Manoa, visit <http://asianprehistory.org/?ckattempt=1>.
+
+<hr>
 
 ::: {layout-ncol=2}
 ![Map of East Asian Late Middle Pleistocene Localities (~350-70 ka).](Chapter 4 map_FM1.png){width=65%}
